# minst-classifier

./: CMakeLists.txt  Dataset.cpp  Dataset.h  Logger.cpp  Logger.h  SGDLearner.cpp  SGDLearner.h  Timer.cpp  Timer.h  embed.cpp  embed.h  error.cpp  error.h  fileHelpers.cpp  fileHelpers.h  globals.h  loss.cpp  loss.h  main.cpp  predict.cpp  predict.h  sgd.cpp  sgd.h
weights/: model_weights.b
